Extended User table field | added 2 apps( admin_panel, user ) | added 2 models in user-app( User_Account, Dog_Pics)

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Dog Spot</title>
 
     <style>
         @import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
@@ -219,7 +219,7 @@
   <!-- https://www.pexels.com/video/aerial-view-of-beautiful-resort-2169880/ -->
   <section class="showcase">
     <header>
-      <h2 class="logo">Blog App</h2>
+      <h2 class="logo">Dogspot</h2>
       <div class="toggle"></div>
     </header>
     <video src="https://traversymedia.com/downloads/videos/explore.mp4" muted loop autoplay></video>
