--- a/templates/user/sidebar.html
+++ b/templates/user/sidebar.html
@@ -2,7 +2,7 @@
 <aside id="sidebar-wrapper">
     <div class="sidebar-brand">
         <a href="#"> {% comment %} <img alt="Image" src="{% static 'dashboard/assets/img/logo.png' %}" class="header-logo" /> {% endcomment %}
-            <span class="logo-name">Admin</span>
+            <span class="logo-name">User Window</span>
         </a>
     </div>
     <ul class="sidebar-menu">
@@ -15,11 +15,15 @@
         </li>
 
         <li class="dropdown active">
-            <a href="#" class="nav-link"><i data-feather="users"></i><span>Users</span></a>
+            <a href="#" class="nav-link"><i data-feather="map"></i><span>Map</span></a>
         </li>
 
         <li class="dropdown active">
-            <a href="#" class="nav-link"><i data-feather="map"></i><span>Map</span></a>
+            <a href="#" class="nav-link"><i data-feather="user"></i><span>Profile</span></a>
+        </li>
+
+        <li class="dropdown active">
+            <a href="#" class="nav-link"><i data-feather="settings"></i><span>Settings</span></a>
         </li>
 
 
