Leaflet map - added, user model - updated, add_dogspot-view logic - added

--- a/templates/admin/sidebar.html
+++ b/templates/admin/sidebar.html
@@ -14,11 +14,11 @@
             <a href="#" class="nav-link"><i data-feather="monitor"></i><span>Dashboard</span></a>
         </li>
 
-        <li class="dropdown active">
+        <li class="dropdown ">
             <a href="#" class="nav-link"><i data-feather="users"></i><span>Users</span></a>
         </li>
 
-        <li class="dropdown active">
+        <li class="dropdown ">
             <a href="#" class="nav-link"><i data-feather="map"></i><span>Map</span></a>
         </li>
 
