--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         padding: 40px 100px;
         z-index: 1000;
         display: flex;
-        justify-content: space-between;
+        justify-content: end;
         align-items: center;
         }
         header .logo
@@ -38,7 +38,8 @@
         position: relative;
         width: 60px;
         height: 60px;
-        background: url(https://i.ibb.co/HrfVRcx/menu.png);
+        /* background: url(https://i.ibb.co/HrfVRcx/menu.png); */
+        background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hamburger_icon.svg/1024px-Hamburger_icon.svg.png);
         background-repeat: no-repeat;
         background-size: 30px;
         background-position: center;
@@ -46,7 +47,8 @@
         }
         .toggle.active
         {
-        background: url(https://i.ibb.co/rt3HybH/close.png);
+        /* background: url(https://i.ibb.co/rt3HybH/close.png); */
+        background: url(http://cdn.onlinewebfonts.com/svg/img_143166.png);
         background-repeat: no-repeat;
         background-size: 25px;
         background-position: center;
@@ -88,8 +90,8 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: #03a9f4;
-        mix-blend-mode: overlay;
+        /* background: #03a9f4; */
+        /* mix-blend-mode: overlay; */
         }
         .text
         {
@@ -212,6 +214,8 @@
         }
     </style>
 
+    <!-- leaflet css -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css" integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin="" />
 
 </head>
 <body>
@@ -219,33 +223,32 @@
   <!-- https://www.pexels.com/video/aerial-view-of-beautiful-resort-2169880/ -->
   <section class="showcase">
     <header>
-      <h2 class="logo">Dogspot</h2>
+      <h2 class="logo" style="color:black !important;padding-right: 30px;">Dogspot</h2>
       <div class="toggle"></div>
     </header>
-    <video src="https://traversymedia.com/downloads/videos/explore.mp4" muted loop autoplay></video>
-    <div class="overlay"></div>
-    <div class="text">
-      <h2>Never Stop To </h2> 
-      <h3>Exploring The World</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.</p>
-      <a href="#">Explore</a>
+    {% comment %} <video src="https://traversymedia.com/downloads/videos/explore.mp4" muted loop autoplay></video> {% endcomment %}
+    <div class="overlay" id="map"></div>
+
+    <div class="text" style="z-index: 9999;">
+      <h2 style="color:black !important;">Check your spot</h2> 
+      <!-- <h3 style="color:black !important;">Exploring The World</h3> -->
+      <p style="color:black !important;font-weight: bold;">People can use this app to walk without fear from any place with photos and behavior of stray dogs.</p>
+      <a href="/accounts/login/">Join Now</a>
     </div>
+
+    
     <ul class="social">
       <li><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
       <li><a href="#"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png"></a></li>
       <li><a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
     </ul>
   </section>
+  
   <div class="menu">
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="/accounts/login/">Login</a></li>
       <li><a href="/accounts/signup/">Signup</a></li>
-      {% comment %} <li><a href="#">News</a></li>
-      <li><a href="#">Destination</a></li> {% endcomment %}
       <li><a href="#!">Blog</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
@@ -260,6 +263,65 @@
       menuToggle.classList.toggle('active');
       showcase.classList.toggle('active');
     })
+  </script>
+
+  <!-- leaflet javascript -->
+  <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js" integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin=""></script>
+
+  <!-- leaflet fullscreem - css and js -->
+  <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' rel='stylesheet' />
+  <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
+
+  <!-- leaflet search- css and js -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+
+  <script>
+    // map initialization
+    // var map = L.map('map').setView([9.621770, 76.530144], 15);
+    // var map = L.map('map').setView([8.5241391, 76.9366376], 15);
+    // var map = L.map('map').setView([8.4855, 76.9492], 15); // python
+    var map = L.map('map', {fullscreenControl: true}).setView([{{lat}}, {{lng}}], 12); // python
+
+    // osm layer
+    var osm = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+    }).addTo(map);
+
+
+    // search to add Location pointer
+    var geocoder = L.Control.geocoder({
+      defaultMarkGeocode: false, position: 'topleft',
+      })
+      .on('markgeocode', function(e) {
+          // console.log(e)
+          // console.log(e.geocode.center.lat)
+          // console.log(e.geocode.center.lng)
+          // console.log(e.geocode.name)
+          lat = e.geocode.center.lat
+          lng = e.geocode.center.lng
+          location_name = e.geocode.name
+          var search_marker = L.marker([lat, lng], {draggable:true}).addTo(map);
+          search_marker.bindPopup(`${search_marker.getLatLng()}<br><a href="add-spot/${lat}/${lng}" target="_blank" style="display:flex;justify-content:center;font-weight:bold;">Add Dogspot </a>`).openPopup();
+
+          // ondrag marker pointer updater
+          search_marker.on('drag', function(e) {
+              // console.log('marker drag event : ', search_marker.getLatLng());
+              lat = search_marker.getLatLng().lat
+              lng = search_marker.getLatLng().lng
+              // console.log(e.target._popup._content)
+              console.log(search_marker)
+              // search_marker.bindPopup(`<a href="add-spot/${lat}/${lng}" target="_blank">Add Dogspot </a>` + search_marker.getLatLng()).openPopup();
+              search_marker.bindPopup(`${search_marker.getLatLng()}<br><a href="add-spot/${lat}/${lng}" target="_blank" style="display:flex;justify-content:center;font-weight:bold;">Add Dogspot </a>`).openPopup();
+          });
+
+      }).addTo(map);
+
+    // adding marker points
+    // var mymarker = L.marker([8.5241391, 76.9366376]).addTo(map);
+    var mymarker = L.marker([{{lat}}, {{lng}}]).addTo(map);
+    mymarker.bindPopup('Normal Marker'+ mymarker.getLatLng())
+
   </script>
 
 </body>
