user/dashboard -> All user_count added\

--- a/templates/user/dashboard.html
+++ b/templates/user/dashboard.html
@@ -89,7 +89,7 @@ User Dashboard
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pr-0 pt-3">
                     <div class="card-content">
                       <h5 class="font-15">Users</h5>
-                      <h2 class="mb-3 font-18">0</h2>
+                      <h2 class="mb-3 font-18">{{user_count}}</h2>
                       <p class="mb-0"><span class="col-green">42%</span> Increase</p>
                     </div>
                   </div>
