user app => user/dogspot_update page -> added

--- a/templates/user/dogspot_list.html
+++ b/templates/user/dogspot_list.html
@@ -71,7 +71,17 @@ User Dashboard
                         {% endfor %}
 
                     </td>
-                    <td><a href="#" class="btn btn-primary">Detail</a></td>
+
+                    <td>
+                        {% comment %} <a href="#" class="btn btn-primary">Detail</a> {% endcomment %}
+                        <form action="{% url "user.dogspot_update" %}" method="post">
+                            {% csrf_token %}
+                            <input type="hidden" value="{{ data.id }}" name="id">
+                            <button class="btn btn-primary">Update</button>
+                        </form>
+                    </td>
+
+                    
                     </tr>
 
                 {% endfor %}
